# minmax-bench

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml
data/: cc_request_template.json
docs/: architecture.md  cost.md  quality.md
harbor_agents/: headroom_ccr_claude_code.py
minmax_bench/: __init__.py  auth.py  bedrock.py  cache.py  catalog.py  chain.py  cli.py  config.py  counterfactual.py  dashboard.py  dense.py  gate.py  interactive.py  models.py  preflight.py  pricing.py  providers.py  provision.py  runner.py  runstore.py  tls.py  tokens.py  transport.py
minmax_bench/data/: loaders.py  local.py  sample.py  swe_chat.py
minmax_bench/executors/: __init__.py  base.py  noop.py  proxy.py  rewrite.py
minmax_bench/harness/: __init__.py  simulator.py
minmax_bench/quality/: __init__.py  engine.py  generate.py  passthrough.py  paths.py  report.py
minmax_bench/report/: __init__.py  buckets.py  table.py
minmax_bench/strategies/: __init__.py  base.py  matrix.py  runners.py
runs/run-12f48cf2-ddb0-4b9e-b4b9-1efcfbab3df4/: README.md  report.json  run.json
runs/run-202f98bd-a2f1-4390-8307-658b451b7727/: README.md  report.json  run.json
runs/run-3064bdc2-ac51-4517-ba7a-a67fbee3e5b6/: README.md  report.json  run.json
runs/run-4a8793f8-5bc0-4e6e-aea0-be0f61d56d47/: run.json
runs/run-5c61ab52-8eea-4fee-97a4-5c64ee5344af/: README.md  report.json  run.json
runs/run-7168554f-ce75-4dee-aba8-c18753f84267/: run.json
runs/run-cba32b86-99ba-4ed7-bf7c-e385edf2ec99/: README.md  report.json  run.json
scripts/: README.md  capture_cc_template.py  fidelity_milestones.py  fidelity_redundancy.py  fidelity_trajectory.py  generate.py  incremental_engine.py  preservation_index.py  report.py  run_cc_matrix.sh  run_ccr_batch.sh
tests/: test_core.py  test_quality.py
(+35 files in other folders)
