[project]
name = "minmax-bench"
version = "0.1.0"
description = "Estimated-savings benchmark that drives real coding-agent sessions through context-reduction proxies (headroom, condense) and reports tokens/cost saved."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "minmax-bench" }]
dependencies = [
    "anthropic>=0.96",
    "certifi>=2024.7.4",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "tokencost>=0.1.26",
    "tiktoken>=0.8",
    "rich>=13.9",
    "typer>=0.12",
    "botocore[crt]>=1.43.53",
    "aws-bedrock-token-generator>=1.1.0",
]

[project.optional-dependencies]
# Loading the gated SALT-NLP/SWE-chat parquet tables and other HF datasets.
hf = [
    "datasets>=3.0",
    "pyarrow>=17.0",
    "huggingface-hub>=0.25",
]

[project.scripts]
minmax-bench = "minmax_bench.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minmax_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# (str, Enum) is intentional for JSON-friendly enums that read as plain strings.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# typer uses Option(...) in defaults (B008) and long help strings (E501) idiomatically.
"minmax_bench/cli.py" = ["B008", "E501"]
# sample.py holds verbose data literals used to exercise compression.
"minmax_bench/data/sample.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
